[ci] Updates gradle to 8.10.1 (#512)